font and layout correction

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <!--Selected Google Fonts-->
-        <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Parkinsans:wght@300..800&family=Trocchi&display=swap" rel="stylesheet">
         
     </head>
     <body>
@@ -27,6 +27,7 @@
                         <h1 id="splash-title" class="modal-title">Lakeshore Nature Preserve Walking Tour</h1>
                         <!--Add additional content here—photos, videos, text, etc.!-->
                         <img id="splash-image" src="img/introduction.png">
+                        <hr>
                         <!--Introductory text of the tour.-->
                         <p>Welcome to the Lakeshore Nature Preserve in Madison, Wisconsin!  Nestled along the scenic shores of Lake Mendota, this preserve offers a unique blend of natural beauty, ecological significance, and cultural history.  The Preserve serves as a haven for biodiversity, providing a habitat for a wide array of plants and wildlife while also offering spaces for education, recreation, and reflection.  Throughout this walking tour, you’ll explore eight locations that highlight the Preserve’s role in fostering connections between people and the environment.  Let’s begin our journey and uncover the stories of this cherished landscape!</p>
                         <!--Button to start the tour.-->
